Services menu slider has been completed

--- a/index.html
+++ b/index.html
@@ -236,10 +236,19 @@
       </div>
       <!-- Services-section -->
       <div class="services-section clearfix">
+        <input type="radio" name="services" id="id-service-1" checked>
+        <input type="radio" name="services" id="id-service-2">
+        <input type="radio" name="services" id="id-service-3">
         <ul class="services-menu">
-          <li><label class="services-menu-item" id="service-menu-item-1">Доставка</label></li>
-          <li><label class="services-menu-item" id="service-menu-item-2">Гарантия</label></li>
-          <li><label class="services-menu-item" id="service-menu-item-3">Кредит</label></li>
+          <li>
+            <label class="services-menu-item" for="id-service-1">Доставка</label>
+          </li>
+          <li>
+            <label class="services-menu-item" for="id-service-2">Гарантия</label>
+          </li>
+          <li>
+            <label class="services-menu-item" for="id-service-3">Кредит</label>
+          </li>
         </ul>
         <div class="service-info service-1-info">
           <h2 class="service-info-title">Доставка</h2>
