Внес исправления по рекомендациям наставника

--- a/catalog.html
+++ b/catalog.html
@@ -168,8 +168,8 @@
                 <div class="catalog-item-image">
                   <img src="img/bfg3000_preview.jpg" alt="BFG 3000"  width="218" height="170">
                 </div>
-                <span class="catalog-item-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-model">BFG 3000</span>
+                <span class="catalog-item-category">Перфоратор BOSCH<br>
+                BFG 3000</span>
                 <span class="catalog-item-discount">22500 Р.</span>
                 <div class="catalog-item-price">15500 Р.</div>
               </li>
@@ -182,8 +182,8 @@
                 <div class="catalog-item-image">
                   <img src="img/bfg6000_preview.jpg" alt="BFG 6000" width="218" height="170" >
                 </div>
-                <span class="catalog-item-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-model">BFG 6000</span>
+                <span class="catalog-item-category">Перфоратор BOSCH<br>
+                BFG 6000</span>
                 <span class="catalog-item-discount">30500 Р.</span>
                 <div class="catalog-item-price">25500 Р.</div>
               </li>
@@ -198,8 +198,8 @@
                   <img src="img/bfg2000_preview.jpg" alt="BFG 2000"  width="218"  height="170">
                 </div>
                 <span class="catalog-item-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-model">BFG 2000</span>
-                <span class="catalog-item-discount">10500 Р.</span>
+                <span class="catalog-item-model">BFG 2000<br>
+                10500 Р.</span>
                 <div class="catalog-item-price">12500 Р.</div>
               </li>
               <!-- Item -->
@@ -211,8 +211,8 @@
                 <div class="catalog-item-image">
                   <img src="img/bfg3000_preview.jpg" alt="BFG 3000"  width="218" height="170">
                 </div>
-                <span class="catalog-item-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-model">BFG 3000</span>
+                <span class="catalog-item-category">Перфоратор BOSCH<br>
+                BFG 3000</span>
                 <span class="catalog-item-discount">22500 Р.</span>
                 <div class="catalog-item-price">15500 Р.</div>
               </li>
@@ -226,8 +226,8 @@
                 <div class="catalog-item-image">
                   <img src="img/bfg6000_preview.jpg" alt="BFG 6000" width="218" height="170" >
                 </div>
-                <span class="catalog-item-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-model">BFG 6000</span>
+                <span class="catalog-item-category">Перфоратор BOSCH<br>
+                BFG 6000</span>
                 <span class="catalog-item-discount">30500 Р.</span>
                 <div class="catalog-item-price">25500 Р.</div>
               </li>
@@ -240,8 +240,8 @@
                 <div class="catalog-item-image">
                   <img src="img/bfg2000_preview.jpg" alt="BFG 2000"  width="218"  height="170">
                 </div>
-                <span class="catalog-item-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-model">BFG 2000</span>
+                <span class="catalog-item-category">Перфоратор BOSCH<br>
+                BFG 2000</span>
                 <span class="catalog-item-discount">10500 Р.</span>
                 <div class="catalog-item-price">12500 Р.</div>
               </li>
@@ -255,8 +255,8 @@
                 <div class="catalog-item-image">
                   <img src="img/bfg3000_preview.jpg" alt="BFG 3000"  width="218" height="170">
                 </div>
-                <span class="catalog-item-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-model">BFG 3000</span>
+                <span class="catalog-item-category">Перфоратор BOSCH<br>
+                BFG 3000</span>
                 <span class="catalog-item-discount">22500 Р.</span>
                 <div class="catalog-item-price">15500 Р.</div>
               </li>
@@ -269,8 +269,8 @@
                 <div class="catalog-item-image">
                   <img src="img/bfg6000_preview.jpg" alt="BFG 6000" width="218" height="170" >
                 </div>
-                <span class="catalog-item-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-model">BFG 6000</span>
+                <span class="catalog-item-category">Перфоратор BOSCH<br>
+                BFG 6000</span>
                 <span class="catalog-item-discount">30500 Р.</span>
                 <div class="catalog-item-price">25500 Р.</div>
               </li>
@@ -283,8 +283,8 @@
                 <div class="catalog-item-image">
                   <img src="img/bfg2000_preview.jpg" alt="BFG 2000"  width="218"  height="170">
                 </div>
-                <span class="catalog-item-category">Перфоратор BOSCH</span>
-                <span class="catalog-item-model">BFG 2000</span>
+                <span class="catalog-item-category">Перфоратор BOSCH<br>
+                BFG 2000</span>
                 <span class="catalog-item-discount">10500 Р.</span>
                 <div class="catalog-item-price">12500 Р.</div>
               </li>
@@ -359,6 +359,21 @@
     <!-- /////////////////////////////////////// -->
     <!-- /////////////// Pop-ups ////////////////-->
     <!-- /////////////////////////////////////// -->
+    <!--Popup Cart +  -->
+    <div class="cart-plus hidden">
+      <i class="close-button">Закрыть</i>
+      <div class="cart-plus-section">
+        <div class="popup-container">
+          <p class="cart-plus-salute">Товар добавлен в корзину!</p>
+        </div>
+      </div>
+      <div class="cart-plus-section-bottom clearfix">
+        <div class="cart-plus-container">
+          <a class="btn cart-plus-order" href="#">Оформить заказ</a>
+          <a class="btn cart-plus-continue" href="#">Продолжить покупки</a>
+        </div>
+      </div>
+    </div>
     <!-- write-us form  -->
     <form class="write-us-form hidden" action="#" method="post">
       <i class="close-button">Закрыть</i>
@@ -380,5 +395,16 @@
       </div>
     </form>
     <div class="overlay hidden"></div>
+    <script>
+      var buyButton = document.querySelector(".item-action-buy");
+      var overlay = document.querySelector(".overlay");
+      var cartPlus = document.querySelector(".cart-plus");
+
+      buyButton.addEventListener("click", function(event) {
+        event.preventDefault();
+        cartPlus.classList.remove("hidden");
+        overlay.classList.remove("hidden");
+      })
+    </script>
   </body>
 </html>
