--- a/catalog.html
+++ b/catalog.html
@@ -96,9 +96,9 @@
                     </div>
                   </div>
                   <div class="price-controls clearfix">
-                    <input class="min-price-range" type="text" name="min-price" id="id-min-price" placeholder="0">
+                    <input class="min-price-range" type="text" name="min-price" id="id-min-price" value="0">
                     <div class="range-divisor">&#8211;</div>
-                    <input class="max-price-range" type="text" name="max-price" id="id-max-price" placeholder="3000">
+                    <input class="max-price-range" type="text" name="max-price" id="id-max-price" value="3000">
                   </div>
                 </div>
               </fieldset>
